Fixed burger wrapping

--- a/styling/stylesheet.scss
+++ b/styling/stylesheet.scss
@@ -12,17 +12,22 @@ main {
 }
 
 section.burgers {
-  border: $border;
-  padding: $padding;
+  flex-wrap: wrap;
 
-  li {
-	border: $border;
-	padding: $padding;
-	list-style: none;
-	margin: 0 5px 5px 0;
-	/*float: left;*/
-	display: inline-block;
+  md-card {
+	width: 200px;
   }
+  //border: $border;
+  //padding: $padding;
+
+  //li {
+	//border: $border;
+	//padding: $padding;
+	//list-style: none;
+	//margin: 0 5px 5px 0;
+	//[>float: left;<]
+	//display: inline-block;
+  //}
 }
 
 .order-status {
